frontend/tests/cases/positive/interface-simple-06.gr
-- a function with multiple interface constraints
simple : forall (a : Type) . {Simple1 a, Simple2 a} => a -> a
simple x = x
